Customer feature added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,8 +21,8 @@
     <h1>Szkolenia małe i duże</h1>
     <h3>Co chesz zrobić?</h3>
     <hr/>
-    <a th:href="products">Zaloguj</a><br/>
-    <a th:href="customers">Zarejestruj</a>
+    <a th:href="login">Zaloguj</a><br/>
+    <a th:href="register">Zarejestruj</a>
 </div>
 </body>
 </html>
