--- a/src/main/resources/templates/customerPanel.html
+++ b/src/main/resources/templates/customerPanel.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Training Management</title>
-
+    <title>Panel użytkownika</title>
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
           rel="stylesheet" media="screen"/>
@@ -18,11 +15,11 @@
 </head>
 <body>
 <div class="container">
-    <h1>Szkolenia małe i duże</h1>
-    <h3>Co chesz zrobić?</h3>
-    <hr/>
-    <a th:href="${'/login'}">Zaloguj</a><br/>
-    <a th:href="${'/customer/new'}" href="customer/new">Zarejestruj</a>
+    <h2>Jesteś zalogowany na koncie:</h2>
+    <a th:href="courses">Kursy</a><br/>
+    <a th:href="customer">Edytuj profil</a><br/>
+    <a th:href="customers">Lista użytkowników</a><br/><br/>
+    <a th:href="logout">Wyloguj</a>
 </div>
 </body>
 </html>
