--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,8 @@
     <h3>Co chesz zrobić?</h3>
     <hr/>
     <a th:href="${'/login'}">Zaloguj</a><br/>
-    <a th:href="${'/customer/new'}" href="customer/new">Zarejestruj</a>
+    <a th:href="${'/customer/new'}" href="customer/new">Zarejestruj się</a><br/>
+    <a th:href="${'/course/new'}" href="course/new">Nowy kurs</a>
 </div>
 </body>
 </html>
