--- a/src/main/resources/templates/courseForm.html
+++ b/src/main/resources/templates/courseForm.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Spring Boot and Spring MVC</title>
-
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
           rel="stylesheet" media="screen"/>
-
     <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
             th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
-
     <link href="../static/css/spring-core.css"
           th:href="@{css/spring-core.css}" rel="stylesheet" media="screen"/>
 </head>
@@ -19,19 +15,13 @@
 
     <h2>Kurs</h2>
     <div>
-        <form class="form-horizontal" th:object="${course}" th:action="@{/course}" method="post">
+        <form class="form-horizontal" th:object="${course}" th:action="@{/course/}" method="post">
             <input type="hidden" th:field="*{courseId}"/>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Id:</label>
-                <div class="col-sm-10">
-                    <p class="form-control-static" th:text="*{courseId}">Id</p>
-                </div>
-            </div>
 
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nazwa kursu</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-static" th:text="*{courseName}"/>
+                    <input type="text" class="form-static" th:field="*{courseName}"/>
                 </div>
             </div>
             <div class="form-group">
@@ -46,14 +36,15 @@
                     <input type="text" class="form-static" th:field="*{endDate}"/>
                 </div>
             </div>
+            <div class="row">
+                <button type="submit" class="btn btn-default">Zatwierdź</button>
+            </div>
         </form>
-    </div>
-    <div>
-        <a th:href="${'/lecture/list'}">Lista wykładów na kursie</a>
     </div>
     <div>
         <a th:href="${'/course/list'}">Wróć do listy</a>
     </div>
+
 </div>
 </body>
 </html>
