--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
     <title>Spring Boot and Spring MVC</title>
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen"/>
-
+          rel="stylesheet" media="screen" />
     <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
             th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
-
     <link href="../static/css/spring-core.css"
           th:href="@{css/spring-core.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
-
 <div class="container">
 
     <h2>Dane użytkownika</h2>
@@ -27,6 +23,7 @@
                     <input type="text" class="form-control" th:field="*{firstName}"/>
                 </div>
             </div>
+
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nazwisko:</label>
                 <div class="col-sm-10">
@@ -57,7 +54,7 @@
         </form>
     </div>
     <div>
-        <a th:href="${'/customers'}">Wróć do listy</a>
+        <a th:href="${'/customer/list'}">Wróć do listy</a>
     </div>
 </div>
 
