--- a/src/main/resources/templates/lecture.html
+++ b/src/main/resources/templates/lecture.html
@@ -19,40 +19,31 @@
 
     <h2>Kurs</h2>
     <div>
-        <form class="form-horizontal" th:object="${course}" th:action="@{/course}" method="post">
-            <input type="hidden" th:field="*{courseId}"/>
+        <form class="form-horizontal" th:object="${lecture}" th:action="@{/lecture}" method="post">
+            <input type="hidden" th:field="*{lectureId}"/>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Id:</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static" th:text="*{courseId}">Id</p>
+                    <p class="form-control-static" th:text="*{lectureId}">Id</p>
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nazwa kursu</label>
+                <label class="col-sm-2 control-label">Nazwa wykładu</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-static" th:text="*{courseName}"/>
+                    <input type="text" class="form-static" th:text="*{lectureName}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Data rozpoczęcia</label>
+                <label class="col-sm-2 control-label">Data wykładu</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-static" th:field="*{startDate}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Data zakończenia</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-static" th:field="*{endDate}"/>
+                    <input type="text" class="form-static" th:field="*{date}"/>
                 </div>
             </div>
         </form>
     </div>
     <div>
-        <a th:href="${'/lecture/list'}">Lista wykładów na kursie</a>
-    </div>
-    <div>
-        <a th:href="${'/course/list'}">Wróć do listy</a>
+        <a th:href="${'/course/list'}">Wróć do listy kursów</a>
     </div>
 </div>
 </body>
